test/ui/tests/packages/unsupported-component-types/package.metadata
# TEST fail check

name: "future",
version: "99.99.999",

components: [
    {
        type: "example",
        path: "examples/first.lushui",
    },
    {
        type: "test",
        path: "tests/first.lushui",
    },
    {
        type: "benchmark",
        path: "benchmarks/first.lushui",
    },
]
